--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ footer{text-align:center;margin-top:16px;color:#8a4a6a}
     <!-- TEXT -->
     <div style="flex:1; margin-top: 150px;">
       <div class="sentences">
-        <div class="float">Five years, and my heart still chooses you every single day —</div>
+        <div class="float">my heart chooses you every single day  —</div>
         <p style="margin-top:10px">
           In you, I found my safest place, my happiest moments, and the kind of love people spend lifetimes searching for.
           Happy Birthday, my love ❤️
@@ -232,9 +232,10 @@ function openModalWithType(text){
 /* SURPRISE BUTTON */
 document.getElementById('justSurprise').onclick=()=>{
   fireConfetti(70);
-  openModalWithType("Happy Birthday Gayathri! You are my world, my joy, and my forever. ❤️");
+  openModalWithType("Happy Birthday Gayu! You are my world, my joy, and my forever. ❤️");
 };
 </script>
 
 </body>
 </html>
+
