--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@ footer{text-align:center;margin-top:16px;color:#8a4a6a}
   </div>
 
   <footer>❤ — Love you My Dear!</footer>
+  <small style="opacity: 80%;">🔥Tip — Click the image to flip and reveal the other side.</small>
+
 </div>
 
 <!-- confetti -->
@@ -238,4 +240,5 @@ document.getElementById('justSurprise').onclick=()=>{
 
 </body>
 </html>
+
 
