--- a/index.html
+++ b/index.html
@@ -98,6 +98,25 @@ footer{text-align:center;margin-top:16px;color:#8a4a6a}
   color:var(--deep);
   min-height:36px;
 }
+  @media (max-width: 900px) {
+  .carousel {
+    width: 100%;
+  }
+
+  .img-wrap {
+    width: 100% !important;
+    max-width: 100% !important;
+    height: auto;               /* lets image grow */
+    aspect-ratio: 1 / 1;        /* keeps it square */
+  }
+
+  .img-front, .img-back {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+}
+
 </style>
 </head>
 <body>
@@ -240,5 +259,6 @@ document.getElementById('justSurprise').onclick=()=>{
 
 </body>
 </html>
+
 
 
