--- a/index.html
+++ b/index.html
@@ -98,24 +98,26 @@ footer{text-align:center;margin-top:16px;color:#8a4a6a}
   color:var(--deep);
   min-height:36px;
 }
-  @media (max-width: 900px) {
+ @media (max-width: 900px) {
   .carousel {
-    width: 100%;
+    width: 100% !important;
   }
 
   .img-wrap {
-    width: 100% !important;
-    max-width: 100% !important;
-    height: auto;               /* lets image grow */
-    aspect-ratio: 1 / 1;        /* keeps it square */
+    width: 100vw !important;   /* full screen width */
+    max-width: 100vw !important;
+    height: 100vw !important;  /* makes it a big square */
+    margin-left: 50%;
+    transform: translateX(-50%); /* center the image */
   }
 
   .img-front, .img-back {
-    height: 100%;
     width: 100%;
+    height: 100%;
     object-fit: cover;
   }
 }
+
 
 </style>
 </head>
@@ -259,6 +261,7 @@ document.getElementById('justSurprise').onclick=()=>{
 
 </body>
 </html>
+
 
 
 
